# genhealthai-exam

./: .gitignore  README.md  build.sh  render.yaml
.github/workflows/: ci-cd.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt  startup.sh
backend/app/: __init__.py  config.py  extensions.py
backend/app/middleware/: __init__.py  logging_middleware.py
backend/app/models/: __init__.py  activity_log.py  document.py  order.py  refresh_token.py  user.py
backend/app/repositories/: __init__.py  activity_log_repository.py  base_repository.py  document_repository.py  order_repository.py  refresh_token_repository.py  user_repository.py
backend/app/routes/: __init__.py  admin.py  auth.py  orders.py  system.py
backend/app/schemas/: __init__.py  activity_log.py  auth.py  common.py  document.py  order.py
backend/app/services/: __init__.py  activity_service.py  auth_service.py  extraction_service.py  order_service.py
backend/app/utils/: errors.py  pdf_parser.py
backend/migrations/versions/: 5d43bde77ebe_initial_migration_create_all_tables.py
backend/tests/: conftest.py  factories.py  test_activity_log.py  test_auth.py  test_config.py  test_extensions.py  test_extraction.py  test_health.py  test_models.py  test_orders.py  test_repositories.py  test_schemas.py  test_utils.py
design/: assessment-high-level-design.md  assessment-low-level-design.md  assessment-requirements.md
documents/: assessmentInstructions.md
frontend/: AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  routes.tsx
frontend/src/api/: auth.ts  client.ts  orders.ts
frontend/src/api/__tests__/: auth.test.ts  client.test.ts  orders.test.ts
frontend/src/components/auth/: LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx
frontend/src/components/common/: ConfirmDialog.tsx  ErrorAlert.tsx  LoadingSpinner.tsx  PageLayout.tsx
frontend/src/components/common/__tests__/: CommonComponents.test.tsx
frontend/src/components/orders/: DocumentUpload.tsx  OrderDetail.tsx  OrderForm.tsx  OrderStatusChip.tsx  OrderTable.tsx  index.ts
frontend/src/context/: AuthContext.tsx
frontend/src/context/__tests__/: AuthContext.test.tsx
frontend/src/hooks/: useDocumentUpload.ts  useOrders.ts
frontend/src/hooks/__tests__/: useDocumentUpload.test.ts  useOrders.test.ts
frontend/src/pages/: CreateOrderPage.tsx  LoginPage.tsx  OrderDetailPage.tsx  OrderListPage.tsx  RegisterPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: validators.ts
frontend/src/utils/__tests__/: validators.test.ts
plan/: assessment-plan.md
reviews/: assessment-high-level-design-review.md  assessment-low-level-design-review.md
