[project]
name = "genhealthai-backend"
version = "0.1.0"
description = "GenHealth AI DME Order Management Backend"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0,<4.0",
    "flask-sqlalchemy>=3.1,<4.0",
    "flask-migrate>=4.0,<5.0",
    "flask-jwt-extended>=4.6,<5.0",
    "flask-smorest>=0.44,<1.0",
    "flask-cors>=4.0,<5.0",
    "flask-limiter>=3.5,<4.0",
    "flask-talisman>=1.1,<2.0",
    "marshmallow>=3.20,<4.0",
    "anthropic>=0.39,<1.0",
    "pdfplumber>=0.11,<1.0",
    "bcrypt>=4.1,<5.0",
    "python-dotenv>=1.0,<2.0",
    "gunicorn>=21.2,<23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.15,<1.0",
    "mypy>=1.20,<2.0",
    "pre-commit>=4.5,<5.0",
    "pip-audit>=2.10,<3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

# ── Ruff (linter + formatter) ───────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "PERF", # perflint
]
ignore = [
    "S101",   # assert used (needed in tests)
    "B008",   # function call in default arg (common in Flask/DI)
    "RET504", # unnecessary assignment before return
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "T20"]
"migrations/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy (static type checking) ─────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["flask_smorest.*", "flask_limiter.*", "flask_talisman.*", "pdfplumber.*", "anthropic.*"]
ignore_missing_imports = true

# ── pytest + coverage ────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
